# omeinsum

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_1g.csv  bench_4g.csv  bench_omeinsum.py
src/omeinsum/: __init__.py
tests/: test_multi_gpu.py  test_single_gpu.py  test_smoke.py
