[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omeinsum"
version = "0.1.0"
description = "Blocked einsum with CPU offload, checkpoint, and simple multi-GPU dispatch."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Qi Yang" }]
dependencies = [
    "opt-einsum>=3.4.0",
    "torch>=2.8.0",
]
keywords = ["einsum", "pytorch", "gpu", "checkpoint", "cuda", "offload"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/yourname/OMEinsum"
Repository = "https://github.com/yourname/OMEinsum"
